test/pending/pos/t0999.scala
object A {
  val d: Double = Math.sqrt(5 match {
    case x: Double => x
  })
}
