test/pending/neg/t1049.scala
object T1049 {
  "abc" match {
    case x: x.Whatever =>
  }
}
